--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
         </ul>
     </nav>
     <div class="heading">
+        <div class="overlay">
+            <video autoplay muted loop src="video.mp4">
+            </video>
+        </div>
         <div class="slogan">
         <h1>UnderWatch</h1>
         <p>Find Scrims, Find Friends, Find Teammates, Get Better, Rank Up</p>
-        </div>
             <a data-scroll href="#about">
-            <div class="arrow"></div>
-        </a>
-    </div>
-    <div class="overlay">
-    <video autoplay muted loop src="video.mp4">
-    </video>
+                <div class="arrow"></div>
+            </a>
+        </div>
     </div>
 </header>
 <main id ="about">
@@ -46,6 +46,17 @@
             For people who don’t want to, or aren’t ready, to join a competitive team, we offer a vivid community of Overwatch players, with multiple events and tournaments every single week.
         </p>
 </div>
+</main>
+<main id ="events">
+    <div class="blur"></div>
+
+    <div class="events">
+        <h1>Tournaments, Events, and Discord</h1>
+        <p>
+        </p>
+    </div>
+
+
 </main>
 
 
