--- a/index.html
+++ b/index.html
@@ -1,80 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>UnderWatch</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://kit.fontawesome.com/dbf088141b.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
 </head>
+
 <body>
-<header>
-    <nav id="navbar">
-        <ul>
-            <li><a href="#home">
-                <img class = 'underwatchLogo' src = 'logo.png' alt ="Underwatch"/>
-            </a></li>
-            <li><a href="#social media"><i class="fa-brands fa-discord" aria-hidden="true"></i></a></li>
-            <li><a href="#social media"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a></li>
-            <li><a href="#about"  title="About Us"><i class="fas fa-address-book" aria-hidden="true"></i></a></li>
-            <li><a href="#social media"><i class="fas fa-trophy" aria-hidden="true"></i></a></li>
-            <li><a href="#social media"><i class="fas fa-donate" aria-hidden="true"></i></a></li>
-
-
-        </ul>
-    </nav>
-    <div class="heading">
-        <div class="overlay">
-            <video autoplay muted loop src="video.mp4">
-            </video>
-        </div>
-        <div class="slogan">
-        <h1>UnderWatch</h1>
-        <p>Find Scrims, Find Friends, Find Teammates, Get Better, Rank Up</p>
-            <a data-scroll href="#about">
-                <div class="arrow"></div>
+    <header>
+        <nav id="navbar">
+            <a href="#home">
+                <img class='underwatchLogo' src='logo.png' alt="Underwatch" />
             </a>
+            <ul class="nav-list">
+            </ul>
+        </nav>
         </div>
-    </div>
-</header>
-<main id ="about">
-    <div class="about">
-        <h1>About Us</h1>
-        <img src="ow2-featured.webp" alt="image of Overwatch characters"/>
-        <p>
-            Underwatch is a non-profit eSports organization, which strives to create a safe space for all players! Our goal is to connect you with other like-minded people and thereby improve your gameplay.
-            With the help of our supporters, mods and team managers, we are able to bring to you 100% free teams with professional coaches. This would not be possible without our donors, so thank you to them again!
-            For people who don’t want to, or aren’t ready, to join a competitive team, we offer a vivid community of Overwatch players, with multiple events and tournaments every single week.
-        </p>
-</div>
-</main>
-<main id ="events">
-    <div class="blur"></div>
+        <div class="heading">
+            <div class="overlay">
+                <video autoplay muted loop src="F2P_Trailer.webm">
+                </video>
+            </div>
+            <div class="slogan">
+                <h1>UnderWatch</h1>
+                <p>Find Scrims, Find Friends, Find Teammates, Get Better, Rank Up</p>
+                <a data-scroll href="#about">
+                    <div class="arrow"></div>
+                </a>
+            </div>
+        </div>
+    </header>
+    <main id="about">
+        <div class="about">
+            <h1>About Us</h1>
+            <img src="wallpapersden.com_overwatch-2_3840x2160.jpg" alt="image of Overwatch characters" />
+            <p>
+                Underwatch is a non-profit eSports organization, which strives to create a safe space for all players!
+                Our goal is to connect you with other like-minded people and thereby improve your gameplay.
+                With the help of our supporters, mods and team managers, we are able to bring to you 100% free teams
+                with professional coaches. This would not be possible without our donors, so thank you to them again!
+                For people who don’t want to, or aren’t ready, to join a competitive team, we offer a vivid community of
+                Overwatch players, with multiple events and tournaments every single week.
+            </p>
+            <button class="blue-button">Join Our Discord</button>
 
-    <div class="events">
-        <h1>Tournaments, Events, and Discord</h1>
-        <p>
-        </p>
-    </div>
+        </div>
+    </main>
+    <main id="events">
+        <div class="blur"></div>
+
+        <div class="events">
+            <h1>Tournaments, Events and Discord</h1>
+            <p>
+                Underwatch hosts regular tournaments and events, almost all of them free to join!
+            </p>
+        </div>
+    </main>
+
+    <main>
+        <div>
+            <h1>Donations</h1>
+        </div>
+    </main>
 
 
-</main>
 
 
 
 
+    <script>
+        let prevScrollpos = window.pageYOffset;
+        window.onscroll = function () {
+            let currentScrollPos = window.pageYOffset;
+            if (prevScrollpos > currentScrollPos) {
+                document.getElementById("navbar").style.display = "flex";
+            } else {
+                document.getElementById("navbar").style.display = "none";
+            }
+            prevScrollpos = currentScrollPos;
+        }
+        const bars = `<li><a onclick="displayNavList()"><i class="fas fa-bars" aria-hidden="true"></i></a></li>`
+        const nav = document.getElementsByClassName("nav-list")[0]
+        const navList = `
+        <li><a href="#social media"><i class="fa-brands fa-discord" aria-hidden="true"></i></a></li>
+                    <li><a href="#social media"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="#about" title="About Us"><i class="fas fa-address-book" aria-hidden="true"></i></a>
+                    </li>
+                    <li><a href="#social media"><i class="fas fa-trophy" aria-hidden="true"></i></a></li>
+                    <li><a href="#social media"><i class="fas fa-donate" aria-hidden="true"></i></a></li>`
 
-<script>
-var prevScrollpos = window.pageYOffset;
-window.onscroll = function() {
-var currentScrollPos = window.pageYOffset;
-  if (prevScrollpos > currentScrollPos) {
-    document.getElementById("navbar").style.display = "block";
-  } else {
-    document.getElementById("navbar").style.display = "none";
-  }
-  prevScrollpos = currentScrollPos;
-}
-</script>
+
+        let maxScreenSizeForBars = window.matchMedia("(min-width: 800px)")
+        function toggleNav(size) {
+            if (size.matches) {
+                nav.innerHTML = navList
+            } else {
+                nav.innerHTML = bars
+            }
+        }
+        toggleNav(maxScreenSizeForBars)
+        maxScreenSizeForBars.addListener(toggleNav)
+        function displayNavList() {
+            const navList = `<li><a onclick="closeNavList()"><i class="fas fa-bars" aria-hidden="true"></i></a></li>
+        <li><a href="#social media"><i class="fa-brands fa-discord" aria-hidden="true"></i></a></li>
+                    <li><a href="#social media"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a></li>
+                    <li><a href="#about" title="About Us"><i class="fas fa-address-book" aria-hidden="true"></i></a>
+                    </li>
+                    <li><a href="#social media"><i class="fas fa-trophy" aria-hidden="true"></i></a></li>
+                    <li><a href="#social media"><i class="fas fa-donate" aria-hidden="true"></i></a></li>`;
+
+            const navListElement = document.getElementsByClassName("nav-list")[0];
+            const navBar = document.getElementById("navbar")
+            navListElement.style.flexDirection = "column"
+            navBar.style.alignItems = "flex-start"
+            navBar.style.background = "linear-gradient(180deg, black 1%, transparent 99%)"
+            navListElement.innerHTML = navList;
+        }
+        function closeNavList() {
+
+            const navListElement = document.getElementsByClassName("nav-list")[0];
+            const navBar = document.getElementById("navbar")
+            navListElement.style.flexDirection = "row"
+            navBar.style.alignItems = "center"
+            navBar.style.background = "black"
+            navListElement.innerHTML = bars;
+        }
+    </script>
 </body>
-</html>
 
+</html>
